modif du projet

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@ nav {
   background-color: #2a2d3e;
   display: flex;
   justify-content: space-between;
+  flex-direction: row;
   font-family: "Riffic", cursive;
   font-size: 1.2em;
 }
@@ -33,9 +34,10 @@ nav {
   height: 100%;
 }
 
-.menu_nav ul li a {
+.menu_nav ul {
   color: #ffffff;
   display: flex;
   justify-content: space-between;
+  flex-direction: row;
   list-style: none;
-}/*# sourceMappingURL=style.css.map */
+}
