--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Courgette&family=Fredoka+One&family=Mochiy+Pop+P+One&family=Righteous&family=Staatliches&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Condiment&family=Courgette&family=Fredoka+One&family=Mochiy+Pop+P+One&family=Righteous&family=Smooch&family=Staatliches&display=swap");
 nav {
   background-color: #2a2d3e;
   display: flex;
   justify-content: space-between;
   flex-direction: row;
   font-family: "Fredoka One", cursive;
-  font-size: 1.3em;
+  font-size: 1.7em;
 }
 
 .logo_nav {
@@ -72,11 +72,17 @@ nav {
 
 .header_deux {
   background-color: #2a2d3ec9;
-  font-family: "Courgette", cursive;
-  font-size: 1.3em;
+  font-family: "Condiment", cursive;
+  font-size: 2em;
   color: #ffffff;
+}
+.header_deux img {
+  width: 400px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 100%;
 }
 
 .one_div {
-  background-color: #3E5393;
+  background-color: #3e5393;
 }
