--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,39 +56,6 @@ nav {
   text-decoration: none;
 }
 
-.header_deux {
-  background-color: #2a2d3ec9;
-}
-.header_deux .deux_a {
-  display: flex;
-  justify-content: space-around;
-  flex-direction: row;
-  font-family: "Condiment", cursive;
-  font-size: 5em;
-}
-.header_deux .deux_a p {
-  color: #ffffff;
-  padding-left: 40px;
-  right: auto;
-}
-.header_deux .deux_a img {
-  width: 550px;
-  -o-object-fit: cover;
-     object-fit: cover;
-  height: 100%;
-  left: auto;
-}
-.header_deux .deux_b {
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-  align-items: center;
-  font-family: "Fredoka One", cursive;
-  font-size: 1.2em;
-  color: #ffffff;
-  padding: 40px;
-}
-
 .reseaux_nav {
   display: flex;
   justify-content: space-between;
@@ -109,6 +76,52 @@ nav {
   color: #ffffff;
 }
 
+.header_deux {
+  background-image: url(https://images.pexels.com/photos/16516/pexels-photo.jpg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+.header_deux .deux_background {
+  background-color: #2a2d3ec9;
+}
+.header_deux .deux_background .deux_a {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  font-family: "Condiment", cursive;
+  font-size: 5em;
+}
+.header_deux .deux_background .deux_a p {
+  color: #ffffff;
+  padding-left: 40px;
+  left: auto;
+}
+.header_deux .deux_background .deux_a img {
+  width: 550px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 100%;
+  align-items: center;
+  padding: 40px;
+  right: auto;
+}
+.header_deux .deux_background .deux_b {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  align-items: center;
+  font-family: "Fredoka One", cursive;
+  font-size: 1.2em;
+  color: #ffffff;
+  padding: 40px;
+}
+
 .one_div {
   background-color: #3e5393;
+  padding: 40px;
+  font-family: "Fredoka One", cursive;
+  font-size: 1.2em;
+  color: #ffffff;
+  padding: 40px;
+  text-align: center;
 }/*# sourceMappingURL=style.css.map */
